*SVN*

* Added dynamic attribute-based finders as a cleaner way of getting objects by simple queries without turning to SQL. 
  They work by appending the name of an attribute to <tt>find_by_</tt>, so you get finders like <tt>Person.find_by_user_name,
  Payment.find_by_transaction_id</tt>. So instead of writing <tt>Person.find_first(["user_name = ?", user_name])</tt>, you just do
  <tt>Person.find_by_user_name(user_name)</tt>.
  
  It's also possible to use multiple attributes in the same find by separating them with "_and_", so you get finders like
  <tt>Person.find_by_user_name_and_password</tt> or even <tt>Payment.find_by_purchaser_and_state_and_country</tt>. So instead of writing
  <tt>Person.find_first(["user_name = ? AND password = ?", user_name, password])</tt>, you just do 
  <tt>Person.find_by_user_name_and_password(user_name, password)</tt>.

  While primarily a construct for easier find_firsts, it can also be used as a construct for find_all by using calls like 
  <tt>Payment.find_all_by_amount(50)</tt> that is turned into <tt>Payment.find_all(["amount = ?", 50])</tt>. This is something not as equally useful,
  though, as it's not possible to specify the order in which the objects are returned.

* Added that Base#find takes an optional options hash, including :conditions. Base#find_on_conditions deprecated in favor of #find with :conditions #407 [bitsweat]

* Added a db2 adapter that only depends on the Ruby/DB2 bindings (http://raa.ruby-lang.org/project/ruby-db2/) #386 [Maik Schmidt]

* Added the final touches to the Microsoft SQL Server adapter by DeLynn Berry that makes it suitable for actual use #394 [DeLynn Barry]

* Fixed a bug in the Ruby/MySQL that caused binary content to be escaped badly and come back mangled #405 [Tobias Luetke]

* Added block-style for callbacks #332 [bitsweat].

    Before:
      before_destroy(Proc.new{ |record| Person.destroy_all "firm_id = #{record.id}" })
    
    After: